# krkr_richtext

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  api-reference.md  manual.tjs  実装.md
data/: startup.tjs
src/: EscapeConverter.cpp  EscapeConverter.hpp  RichTextRender.hpp  main.cpp
